--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="cabecera">
+        Cabecera
+    </div>
     <div class="container">
         <h1>Titulo de blog</h1>
         <p>Parrafo del blogspot</p>
