agregado el contenido adcional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Titulo de blog</h1>
         <p>Parrafo del blogspot</p>
+        <p>Agregado un nuevo parrafo de contenido a nuestro blog</p>
     </div>
 </body>
 </html>
