Modificado estilos de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         Cabecera
     </div>
     <div class="container">
-        <h1>Titulo de blog</h1>
+        <h1>Titulo de blog cabecera</h1>
         <p>Parrafo del blogspot</p>
         <p>Agregado un nuevo parrafo de contenido a nuestro blog</p>
     </div>
