Agregado el footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,5 +15,8 @@
         <p>Parrafo del blogspot</p>
         <p>Agregado un nuevo parrafo de contenido a nuestro blog</p>
     </div>
+    <footer>
+        este es mi footer
+    </footer>
 </body>
 </html>
