--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
         <h1>Titulo de blog cabecera</h1>
         <p>Parrafo del blogspot</p>
         <p>Agregado un nuevo parrafo de contenido a nuestro blog</p>
+        <p>Cambio para pull request</p>
     </div>
     <footer>
         este es mi footer
